--- a/index.html
+++ b/index.html
@@ -52,7 +52,104 @@
     <!--header section end-->
     <!--main section start-->
     <main>
-
+      <section class="bookstore">
+        <div class="wrapper">
+          <h2 class="section-heading">welcome to our bookstore</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia vero laborum quas nesciunt, odio magnam corporis error eaque quae tempora laudantium, accusamus minima! Modi eveniet odio, laudantium nam repellendus magnam error eaque quae.</p>
+          <ul class="bookstore-list">
+            <li class="list-item">
+              <figure>
+                <img src="assets/images/bookstore.png" alt="bookstore">
+              </figure>
+              <div class="bookstore-button">
+                <a href="#FIXME" title="Nam vitae odio">nam vitae odio</a>
+              </div>
+            </li>
+            <li class="list-item">
+              <figure>
+                <img src="assets/images/bookstore.png" alt="bookstore">
+              </figure>
+              <div class="bookstore-button">
+                <a href="#FIXME" title="Integer ornare">integer ornare</a>
+              </div>
+            </li>
+            <li class="list-item">
+              <figure>
+                <img src="assets/images/bookstore.png" alt="bookstore">
+              </figure>
+              <div class="bookstore-button">
+                <a href="#FIXME" title="Cras non augue">cras non augue</a>
+              </div>
+            </li>
+            <li class="list-item">
+              <figure>
+                <img src="assets/images/bookstore.png" alt="bookstore">
+              </figure>
+              <div class="bookstore-button">
+                <a href="#FIXME" title="Dolor lacus">dolor lacus</a>
+              </div>
+            </li>
+            <li class="list-item">
+              <figure>
+                <img src="assets/images/bookstore.png" alt="bookstore">
+              </figure>
+              <div class="bookstore-button">
+                <a href="#FIXME" title="Quisque velit">quisque velit</a>
+              </div>
+            </li>
+            <li class="list-item">
+              <figure>
+                <img src="assets/images/bookstore.png" alt="bookstore">
+              </figure>
+              <div class="bookstore-button">
+                <a href="#FIXME" title="Suspendisse suscipit">suspendisse suscipit</a>
+              </div>
+            </li>
+            <li class="list-item">
+              <figure>
+                <img src="assets/images/bookstore.png" alt="bookstore">
+              </figure>
+              <div class="bookstore-button">
+                <a href="#FIXME" title="Facilisis justo">facilisis justo</a>
+              </div>
+            </li>
+            <li class="list-item">
+              <figure>
+                <img src="assets/images/bookstore.png" alt="bookstore">
+              </figure>
+              <div class="bookstore-button">
+                <a href="#FIXME" title="Vivamus facilisis">vivamus facilisis</a>
+              </div>
+            </li>
+          </ul>
+          <ul class="bookstore-control">
+            <li class="control-item">
+              <a href="#FIXME" title="1">1</a>
+            </li>
+            <li class="control-item">
+              <a href="#FIXME" title="2">2</a>
+            </li>
+            <li class="control-item">
+              <a href="#FIXME" title="3">3</a>
+            </li>
+            <li class="control-item">
+              <a href="#FIXME" title="4">4</a>
+            </li>
+          </ul>
+          <!-- modal box start -->
+          <div class="modal-box">
+            <div class="modal-content">
+              <figure>
+                <img src="assets/images/bookstore.png" alt="bookstore">
+              </figure>
+              <div class="bookstore-button">
+                <a href="#FIXME" title="Nam vitae odio">nam vitae odio</a>
+              </div>
+            </div>
+          </div>
+          <!-- modal box end -->
+        </div>
+      </section>
     </main>
     <!--main section end-->
 
