need-help section structure

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <!--header section end-->
     <!--main section start-->
     <main>
+      <!-- bookstore section start -->
       <section class="bookstore">
         <div class="wrapper">
           <h2 class="section-heading">welcome to our bookstore</h2>
@@ -150,9 +151,25 @@
           <!-- modal box end -->
         </div>
       </section>
+      <!-- bookstore section end -->
+      <!-- need-help section start -->
+      <section class="need-help">
+        <div class="wrapper">
+          <figure class="liveChat-logo">
+            <img src="assets/images/livechat.png" alt="livechat">
+          </figure>
+          <div class="need-help-content">
+            <h2 class="section-heading">need help?</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque commodi incidunt veniam corrupti vel qui animi repellat nam? Nemo ullam consequatur corrupti eligendi id? Incidunt repellendus et quo sapiente nobis?</p>
+            <div class="livechat-button">
+              <a href="#FIXME" title="live chat">live chat</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- need-help section end -->
     </main>
     <!--main section end-->
-
     <!--footer section start-->
     <footer>      
 
