--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
     <!--main section end-->
     <!--footer section start-->
     <footer>      
-
+      <div class="wrapper">
+        <p>copyright &copy; 2022 shelf company - designed by tooplate</p>
+      </div>
     </footer>
     <!--footer section end-->
   </div>
