close modal button added in structure

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
               </div>
             </div>
           </div>
+          <span class="close-modal">&times;</span>
           <!-- modal box end -->
         </div>
       </section>
