banner section added in structure

--- a/index.html
+++ b/index.html
@@ -44,14 +44,20 @@
             </li>
           </ul>
         </nav>
-        <figure class="header-bg">
-          <img src="assets/images/banner.png" alt="banner image">
-        </figure>
       </div>
     </header>
     <!--header section end-->
     <!--main section start-->
     <main>
+      <!-- banner section start -->
+      <div class="banner">
+        <div class="wrapper">
+          <figure class="header-bg">
+            <img src="assets/images/banner.png" alt="banner image">
+          </figure>
+        </div>
+      </div>
+      <!-- banner section end -->
       <!-- bookstore section start -->
       <section class="bookstore">
         <div class="wrapper">
